fixing h3 wrapping

--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,10 @@ h3 {
     padding: 1rem;
 }
 
+section:nth-of-type(2) > div:first-of-type > h3 {
+    max-width: 8ch;
+}
+
 nav {
     background-color: var(--champagne-gold);
     padding: 1em;
